# mcp-gitingest

./: .env.example  .gitignore  AGENT.md  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  LICENSE  README.md  gitingest_server.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
docs/: CONTRIBUTING.md  README.md
ingest_server/: server.py
ingest_server/services/: ingestion_service.py
mcp_gitingest/: server.py
mcp_gitingest/models/: ingestion.py
tests/: test_server.py  test_service.py
