[project]
name = "mcp-gitingest"
version = "0.1.0"
description = "MCP server for GitIngest providing AI-ready repository clones"
authors = [
    { name = "ev3lynx", email = "user@example.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.0.2",
    "gitingest>=0.3.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
mcp-gitingest = "gitingest_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/gitingest_server.py", "/docs", "/CHANGELOG.md"]

[tool.hatch.build.targets.wheel]
include = ["/gitingest_server.py"]
